Fix linter errors

--- a/services.html
+++ b/services.html
@@ -35,7 +35,7 @@
             </h4>
             <p class="text-white">What We Offer</p>
         </div>
-        
+
     </div>
 
     <footer>
@@ -93,7 +93,7 @@
                 <ul>
                     <li>5th Floor, Gee Luang Chang Industrial Building</li>
                     <li>It Yuk Yet Street, To Kwa Wan, Kowloon</li>
-                    <li>Hong Kong</li><br>
+                    <li>Hong Kong</li>
                     <li>Tel: (852) 2389-3238</li>
                     <li>Fax: (852) 2389-3238</li>
                     <li>Email: Info@kdkdkkdkdk</li>
@@ -109,7 +109,6 @@
             <div class="right hr ">
                     <b>Privacy Policy</b>
                     <b>Terms and Conditions</b>
-                </div>
             </div>  
         </div>
 
